--- a/04-web-APIs/optional_01/index.html
+++ b/04-web-APIs/optional_01/index.html
@@ -1,29 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Selecting Elements from The DOM</title>
 </head>
+
 <body>
   <div class="viewport">
     <main>
-      <h1>This is my page title</h1>
+      <h1>Curiosity Cat</h1>
       <section>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium provident ipsa magnam est asperiores debitis ducimus doloribus nulla quisquam eveniet perspiciatis, ea temporibus perferendis deserunt quo delectus, ab inventore cum.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium provident ipsa magnam est asperiores debitis ducimus doloribus nulla quisquam eveniet perspiciatis, ea temporibus perferendis deserunt quo delectus, ab inventore cum.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium provident ipsa magnam est asperiores
+          debitis ducimus doloribus nulla quisquam eveniet perspiciatis, ea temporibus perferendis deserunt quo
+          delectus, ab inventore cum.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium provident ipsa magnam est asperiores
+          debitis ducimus doloribus nulla quisquam eveniet perspiciatis, ea temporibus perferendis deserunt quo
+          delectus, ab inventore cum.</p>
         <p>For more information, <a href="#">click here.</a></p>
       </section>
       <section>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium provident ipsa magnam est asperiores debitis ducimus doloribus nulla quisquam eveniet perspiciatis, ea temporibus perferendis deserunt quo delectus, ab inventore cum.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium provident ipsa magnam est asperiores debitis ducimus doloribus nulla quisquam eveniet perspiciatis, ea temporibus perferendis deserunt quo delectus, ab inventore cum.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium provident ipsa magnam est asperiores
+          debitis ducimus doloribus nulla quisquam eveniet perspiciatis, ea temporibus perferendis deserunt quo
+          delectus, ab inventore cum.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium provident ipsa magnam est asperiores
+          debitis ducimus doloribus nulla quisquam eveniet perspiciatis, ea temporibus perferendis deserunt quo
+          delectus, ab inventore cum.</p>
         <p>For more information, <a href="#">click here.</a></p>
       </section>
     </main>
   </div>
-  
-  <script type="text/javascript">
-    
-  </script>
+
+  <img>
+
+  <script src="./script.js"></script>
 </body>
+
+
 </html>
