--- a/04-web-APIs/09-Stu_SpeedReader/Unsolved/index.html
+++ b/04-web-APIs/09-Stu_SpeedReader/Unsolved/index.html
@@ -7,10 +7,11 @@
 </head>
 
 <body>
-  <h1>Poem Time</h1>
-  <p>Starting in 5...</p>
-  <h2>The End</h2>
-
+  <div class="viewport">
+    <h1>Speed</h1>
+    <p>Starting in...</p>
+    <h2>Read</h2>
+  </div>
   <script src="./script.js"></script>
 
 </body>
